kubernetes/apps/default/plane-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ingress
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: plane-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.177
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/group: Dev
    hajimari.io/icon: mdi:airplane
spec:
  rules:
    - host: plane.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plane-ingress
                port:
                  number: 80
  tls:
    - hosts:
        - plane.${SECRET_DOMAIN}
      secretName: plane-tls
  ingressClassName: nginx
